examples/example_android_opengl3/android/app/build/intermediates/cxx/RelWithDebInfo/616m1d5e/logs/arm64-v8a/build_stdout_ImGuiExample.txt
ninja: Entering directory `/home/user/hax/examples/example_android_opengl3/android/app/.cxx/RelWithDebInfo/616m1d5e/arm64-v8a'
[1/2] Building CXX object CMakeFiles/ImGuiExample.dir/main.cpp.o
FAILED: CMakeFiles/ImGuiExample.dir/main.cpp.o 
/home/user/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=aarch64-none-linux-android21 --sysroot=/home/user/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/sysroot -DIMGUI_IMPL_OPENGL_ES3 -DImGuiExample_EXPORTS -I/home/user/hax/examples/example_android_opengl3/../.. -I/home/user/hax/examples/example_android_opengl3/../../backends -I/home/user/Sdk/ndk/27.2.12479018/sources/android/native_app_glue -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -O2 -g -DNDEBUG -fPIC -std=c++11 -MD -MT CMakeFiles/ImGuiExample.dir/main.cpp.o -MF CMakeFiles/ImGuiExample.dir/main.cpp.o.d -o CMakeFiles/ImGuiExample.dir/main.cpp.o -c /home/user/hax/examples/example_android_opengl3/main.cpp
/home/user/hax/examples/example_android_opengl3/main.cpp:151:40: error: cannot initialize a parameter of type 'void *' with an lvalue of type 'const void *'
  151 |         io.Fonts->AddFontFromMemoryTTF(fontData, assetLength, 16.0f); // Set font size (e.g., 16.0f)
      |                                        ^~~~~~~~
/home/user/hax/examples/example_android_opengl3/../../imgui.h:3336:60: note: passing argument to parameter 'font_data' here
 3336 |     IMGUI_API ImFont*           AddFontFromMemoryTTF(void* font_data, int font_data_size, float size_pixels, const ImFontConfig* font_cfg = NULL, const ImWchar* glyph_ranges = NULL); // Note: Transfer ownership of 'ttf_data' to ImFontAtlas! Will be deleted after destruction of the atlas. Set font_cfg->FontDataOwnedByAtlas=false to keep ownership of your data and it won't be freed.
      |                                                            ^
/home/user/hax/examples/example_android_opengl3/main.cpp:154:57: error: cannot initialize a parameter of type 'void *' with an lvalue of type 'const void *'
  154 |         io.FontDefault = io.Fonts->AddFontFromMemoryTTF(fontData, assetLength, 16.0f);
      |                                                         ^~~~~~~~
/home/user/hax/examples/example_android_opengl3/../../imgui.h:3336:60: note: passing argument to parameter 'font_data' here
 3336 |     IMGUI_API ImFont*           AddFontFromMemoryTTF(void* font_data, int font_data_size, float size_pixels, const ImFontConfig* font_cfg = NULL, const ImWchar* glyph_ranges = NULL); // Note: Transfer ownership of 'ttf_data' to ImFontAtlas! Will be deleted after destruction of the atlas. Set font_cfg->FontDataOwnedByAtlas=false to keep ownership of your data and it won't be freed.
      |                                                            ^
2 errors generated.
ninja: build stopped: subcommand failed.
